SOAR-15612-Making version is bumped in all places after changes

--- a/plugins/zoom/plugin.spec.yaml
+++ b/plugins/zoom/plugin.spec.yaml
@@ -5,6 +5,7 @@ name: zoom
 title: Zoom
 description: Trigger workflows on user activity while also managing your users with the Zoom plugin
 version: 4.1.2
+connection_version: 4
 vendor: rapid7
 support: rapid7
 status: []
