--- a/plugins/microsoft_atp/plugin.spec.yaml
+++ b/plugins/microsoft_atp/plugin.spec.yaml
@@ -4,10 +4,12 @@ products: ["insightconnect"]
 name: microsoft_atp
 title: Microsoft Windows Defender ATP
 description: The Windows Defender Advanced Threat Protection plugin allows Rapid7 InsightConnect users to quickly take remediation actions across their organization. This plugin can isolate machines, run virus scans, and quarantine files
-version: 4.8.1
+version: 5.0.0
+connection_version: 5
 supported_versions: ["2022-05-20"]
 vendor: rapid7
 support: community
+cloud_ready: true
 status: []
 resources:
   vendor_url: https://www.microsoft.com/
@@ -20,7 +22,7 @@ tags:
 - defender
 hub_tags:
   use_cases: [threat_detection_and_response, user_management, alerting_and_notifications, devops]
-  keywords: [windows, atp, microsoft, defender]
+  keywords: [windows, atp, microsoft, defender, cloud_enabled]
   features: []
 
 types:
