--- a/plugins/okta/plugin.spec.yaml
+++ b/plugins/okta/plugin.spec.yaml
@@ -13,7 +13,7 @@ sdk:
   version: 5
   user: nobody
 description: Secure identity management and single sign-on to any application
-version: 4.1.1
+version: 4.2.0
 connection_version: 4
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/okta
@@ -1812,6 +1812,6 @@ tasks:
       logs:
         title: Logs
         description: All system logs within the specified time range
-        type: "[]log"
+        type: object
         required: true
         example: []
