--- a/.github/workflows/plugin_release.yml
+++ b/.github/workflows/plugin_release.yml
@@ -193,13 +193,14 @@ env:
   KOMAND_DOCKERHUB_PASSWORD: ${{ secrets.KOMAND_DOCKERHUB_PASSWORD }}
   PACKAGECLOUD_PYTHON_TOOLING_UNSTABLE: ${{ secrets.PACKAGECLOUD_PYTHON_TOOLING_UNSTABLE }}
 
-  ICON_INTEGRATION_RELEASES_SLACK_WEBHOOK: ${{ secrets.ICON_INTEGRATION_SLACK_WEBHOOK}}
+  ICON_INTEGRATION_RELEASES_ANNOUNCE_WEBHOOK: ${{ secrets.ICON_INTEGRATION_RELEASES_ANNOUNCE_WEBHOOK}}
   IAM_HOST: ${{ secrets.I_AM_HOST }}
   IAM_SESSION_DURATION: ${{ secrets.IAM_SESSION_DURATION }}
 
   JENKINS_USER: ${{ secrets.JENKINS_USER }}
   JENKINS_TOKEN: ${{ secret.JENKINS_TOKEN }}
   JENKINS_URL: ${{ secrets.JENKINS_URL }}
+  JENKINS_CLOUD_JOB: ${{ secrets.JENKINS_CLOUD_JOB }}
 
 jobs:
   release:
@@ -209,90 +210,92 @@ jobs:
       - name: Set up environment variables
         id: setUpEnvironmentVariables
         run: |
-            echo "INSIGHT_KOMAND_PLUGIN_NAME=${{ github.event.inputs.INSIGHT_KOMAND_PLUGIN_NAME }}" >> $GITHUB_ENV
-            echo "INSIGHT_KOMAND_PLUGIN_ALL=${{ github.event.inputs.INSIGHT_KOMAND_PLUGIN_ALL }}" >> $GITHUB_ENV
-            echo "INSIGHT_KOMAND_SIMULATE=${{ github.event.inputs.INSIGHT_KOMAND_SIMULATE }}" >> $GITHUB_ENV
-            echo "ICON_INTEGRATIONS_RELEASES_SLACK_WEBHOOK=${{ env.ICON_INTEGRATION_RELEASES_SLACK_WEBHOOK}}" >> $GITHUB_ENV
-            echo "INSIGHT_KOMAND_FORCE_UPDATE=${{ github.event.INSIGHT_KOMAND_FORCE_UPDATE}}" >> $GITHUB_ENV
-            echo "INSIGHT_KOMAND_PLUGIN_RELEASE_OPTION=${{ github.event.INSIGHT_KOMAND_PLUGIN_RELEASE_OPTION}}" >> $GITHUB_ENV
-            echo "INSIGHT_KOMAND_CLEAN=${{ github.event.INSIGHT_KOMAND_CLEAN}}" >> $GITHUB_ENV
-            echo "INSIGHT_KOMAND_BRANCH=${{ github.event.INSIGHT_KOMAND_BRANCH}}" >> $GITHUB_ENV
+          # Setup environment variables from input
+          echo "INSIGHT_KOMAND_PLUGIN_NAME=${{ github.event.inputs.INSIGHT_KOMAND_PLUGIN_NAME }}" >> $GITHUB_ENV
+          echo "INSIGHT_KOMAND_PLUGIN_ALL=${{ github.event.inputs.INSIGHT_KOMAND_PLUGIN_ALL }}" >> $GITHUB_ENV
+          echo "INSIGHT_KOMAND_SIMULATE=${{ github.event.inputs.INSIGHT_KOMAND_SIMULATE }}" >> $GITHUB_ENV
+          echo "INSIGHT_KOMAND_FORCE_UPDATE=${{ github.event.INSIGHT_KOMAND_FORCE_UPDATE }}" >> $GITHUB_ENV
+          echo "INSIGHT_KOMAND_PLUGIN_RELEASE_OPTION=${{ github.event.INSIGHT_KOMAND_PLUGIN_RELEASE_OPTION }}" >> $GITHUB_ENV
+          echo "INSIGHT_KOMAND_CLEAN=${{ github.event.INSIGHT_KOMAND_CLEAN }}" >> $GITHUB_ENV
+          echo "INSIGHT_KOMAND_BRANCH=${{ github.event.INSIGHT_KOMAND_BRANCH }}" >> $GITHUB_ENV
+          echo "INSIGHT_KOMAND_OVERRIDE_BLACKLISTS=${{ github.event.INSIGHT_KOMAND_OVERRIDE_BLACKLISTS }}" >> $GITHUB_ENV
 
       - name: Set up environments and roles
         id: setUpEnvironmentsAndRoles
         run: |
-            PROD_CLOUD_US_REGION=$(echo "${PROD_CLOUD_US}" | jq -r '.awsRegion' | tr -d '\n')
-            echo "PROD_CLOUD_US_REGION=$PROD_CLOUD_US_REGION" >> $GITHUB_ENV
-            echo "::add-mask::${PROD_CLOUD_US_REGION}"
-            PROD_CLOUD_US_ROLE=$(echo "${PROD_CLOUD_US}" | jq -r '.stsPluginS3Role' | tr -d '\n')
-            echo "PROD_CLOUD_US_ROLE=$PROD_CLOUD_US_ROLE" >> $GITHUB_ENV
-            echo "::add-mask::${PROD_CLOUD_US_ROLE}"
-            PROD_CLOUD_EU_REGION=$(echo "${PROD_CLOUD_EU}" | jq -r '.awsRegion' | tr -d '\n')
-            echo "PROD_CLOUD_EU_REGION=$PROD_CLOUD_EU_REGION" >> $GITHUB_ENV
-            echo "::add-mask::${PROD_CLOUD_EU_REGION}"
-            PROD_CLOUD_EU_ROLE=$(echo "${PROD_CLOUD_EU}" | jq -r '.stsPluginS3Role' | tr -d '\n')
-            echo "PROD_CLOUD_EU_ROLE=$PROD_CLOUD_EU_ROLE" >> $GITHUB_ENV
-            echo "::add-mask::${PROD_CLOUD_EU_ROLE}"
-            PROD_CLOUD_AP_REGION=$(echo "${PROD_CLOUD_AP}" | jq -r '.awsRegion' | tr -d '\n')
-            echo "PROD_CLOUD_AP_REGION=$PROD_CLOUD_AP_REGION" >> $GITHUB_ENV
-            echo "::add-mask::${PROD_CLOUD_AP_REGION}"
-            PROD_CLOUD_AP_ROLE=$(echo "${PROD_CLOUD_AP}" | jq -r '.stsPluginS3Role' | tr -d '\n')
-            echo "PROD_CLOUD_AP_ROLE=$PROD_CLOUD_AP_ROLE" >> $GITHUB_ENV
-            echo "::add-mask::${PROD_CLOUD_AP_ROLE}"
-            PROD_CLOUD_CA_REGION=$(echo "${PROD_CLOUD_CA}" | jq -r '.awsRegion' | tr -d '\n')
-            echo "PROD_CLOUD_CA_REGION=$PROD_CLOUD_CA_REGION" >> $GITHUB_ENV
-            echo "::add-mask::${PROD_CLOUD_CA_REGION}"
-            PROD_CLOUD_CA_ROLE=$(echo "${PROD_CLOUD_CA}" | jq -r '.stsPluginS3Role' | tr -d '\n')
-            echo "PROD_CLOUD_CA_ROLE=$PROD_CLOUD_CA_ROLE" >> $GITHUB_ENV
-            echo "::add-mask::${PROD_CLOUD_CA_ROLE}"
-            PROD_CLOUD_AU_REGION=$(echo "${PROD_CLOUD_AU}" | jq -r '.awsRegion' | tr -d '\n')
-            echo "PROD_CLOUD_AU_REGION=$PROD_CLOUD_AU_REGION" >> $GITHUB_ENV
-            echo "::add-mask::${PROD_CLOUD_AU_REGION}"
-            PROD_CLOUD_AU_ROLE=$(echo "${PROD_CLOUD_AU}" | jq -r '.stsPluginS3Role' | tr -d '\n')
-            echo "PROD_CLOUD_AU_ROLE=$PROD_CLOUD_AU_ROLE" >> $GITHUB_ENV
-            echo "::add-mask::${PROD_CLOUD_AU_ROLE}"
-            PROD_CLOUD_US2_REGION=$(echo "${PROD_CLOUD_US2}" | jq -r '.awsRegion' | tr -d '\n')
-            echo "PROD_CLOUD_US2_REGION=$PROD_CLOUD_US2_REGION" >> $GITHUB_ENV
-            echo "::add-mask::${PROD_CLOUD_US2_REGION}"
-            PROD_CLOUD_US2_ROLE=$(echo "${PROD_CLOUD_US2}" | jq -r '.stsPluginS3Role' | tr -d '\n')
-            echo "PROD_CLOUD_US2_ROLE=$PROD_CLOUD_US2_ROLE" >> $GITHUB_ENV
-            echo "::add-mask::${PROD_CLOUD_US2_ROLE}"
-            PROD_CLOUD_US3_REGION=$(echo "${PROD_CLOUD_US3}" | jq -r '.awsRegion' | tr -d '\n')
-            echo "PROD_CLOUD_US3_REGION=$PROD_CLOUD_US3_REGION" >> $GITHUB_ENV
-            echo "::add-mask::${PROD_CLOUD_US3_REGION}"
-            PROD_CLOUD_US3_ROLE=$(echo "${PROD_CLOUD_US3}" | jq -r '.stsPluginS3Role' | tr -d '\n')
-            echo "PROD_CLOUD_US3_ROLE=$PROD_CLOUD_US3_ROLE" >> $GITHUB_ENV
-            echo "::add-mask::${PROD_CLOUD_US3_ROLE}"
-            INT_CLOUD_US_REGION=$(echo "${INT_CLOUD_US}" | jq -r '.awsRegion' | tr -d '\n')
-            echo "INT_CLOUD_US_REGION=$INT_CLOUD_US_REGION" >> $GITHUB_ENV
-            echo "::add-mask::${INT_CLOUD_US_REGION}"
-            INT_CLOUD_US_ROLE=$(echo "${INT_CLOUD_US}" | jq -r '.stsPluginS3Role' | tr -d '\n')
-            echo "INT_CLOUD_US_ROLE=$INT_CLOUD_US_ROLE" >> $GITHUB_ENV
-            echo "::add-mask::${INT_CLOUD_US_ROLE}"
-            HUB_PROD_REGION=$(echo "${HUB_PROD}" | jq -r '.awsRegion' | tr -d '\n')
-            echo "HUB_PROD_REGION=$HUB_PROD_REGION" >> $GITHUB_ENV
-            echo "::add-mask::${HUB_PROD_REGION}"
-            HUB_PROD_ROLE=$(echo "${HUB_PROD}" | jq -r '.stsPluginS3Role' | tr -d '\n')
-            echo "HUB_PROD_ROLE=$HUB_PROD_ROLE" >> $GITHUB_ENV
-            echo "::add-mask::${HUB_PROD_ROLE}"
-            HUB_STAGING_REGION=$(echo "${HUB_STAGING}" | jq -r '.awsRegion' | tr -d '\n')
-            echo "HUB_STAGING_REGION=$HUB_STAGING_REGION" >> $GITHUB_ENV
-            echo "::add-mask::${HUB_STAGING_REGION}"
-            HUB_STAGING_ROLE=$(echo "${HUB_STAGING}" | jq -r '.stsPluginS3Role' | tr -d '\n')
-            echo "HUB_STAGING_ROLE=$HUB_STAGING_ROLE" >> $GITHUB_ENV
-            echo "::add-mask::${HUB_STAGING_ROLE}"
-            ALLIANCE_STAGING_REGION=$(echo "${ALLIANCE_STAGING}" | jq -r '.awsRegion' | tr -d '\n')
-            echo "ALLIANCE_STAGING_REGION=$ALLIANCE_STAGING_REGION" >> $GITHUB_ENV
-            echo "::add-mask::${ALLIANCE_STAGING_REGION}"
-            HUB_STAGING_ROLE=$(echo "${ALLIANCE_STAGING}" | jq -r '.stsPluginS3Role' | tr -d '\n')
-            echo "ALLIANCE_STAGING_ROLE=$ALLIANCE_STAGING_ROLE" >> $GITHUB_ENV
-            echo "::add-mask::${ALLIANCE_STAGING_ROLE}"
-            ALLIANCE_PROD_REGION=$(echo "${ALLIANCE_PROD}" | jq -r '.awsRegion' | tr -d '\n')
-            echo "ALLIANCE_PROD_REGION=$ALLIANCE_PROD_REGION" >> $GITHUB_ENV
-            echo "::add-mask::${ALLIANCE_PROD_REGION}"
-            ALLIANCE_PROD_ROLE=$(echo "${ALLIANCE_PROD}" | jq -r '.stsPluginS3Role' | tr -d '\n')
-            echo "ALLIANCE_PROD_ROLE=$ALLIANCE_PROD_ROLE" >> $GITHUB_ENV
-            echo "::add-mask::${ALLIANCE_PROD_ROLE}"
+          # Setup environment and role for each region for retreiving credentials
+          PROD_CLOUD_US_REGION=$(echo "${PROD_CLOUD_US}" | jq -r '.awsRegion' | tr -d '\n')
+          echo "PROD_CLOUD_US_REGION=$PROD_CLOUD_US_REGION" >> $GITHUB_ENV
+          echo "::add-mask::${PROD_CLOUD_US_REGION}"
+          PROD_CLOUD_US_ROLE=$(echo "${PROD_CLOUD_US}" | jq -r '.stsPluginS3Role' | tr -d '\n')
+          echo "PROD_CLOUD_US_ROLE=$PROD_CLOUD_US_ROLE" >> $GITHUB_ENV
+          echo "::add-mask::${PROD_CLOUD_US_ROLE}"
+          PROD_CLOUD_EU_REGION=$(echo "${PROD_CLOUD_EU}" | jq -r '.awsRegion' | tr -d '\n')
+          echo "PROD_CLOUD_EU_REGION=$PROD_CLOUD_EU_REGION" >> $GITHUB_ENV
+          echo "::add-mask::${PROD_CLOUD_EU_REGION}"
+          PROD_CLOUD_EU_ROLE=$(echo "${PROD_CLOUD_EU}" | jq -r '.stsPluginS3Role' | tr -d '\n')
+          echo "PROD_CLOUD_EU_ROLE=$PROD_CLOUD_EU_ROLE" >> $GITHUB_ENV
+          echo "::add-mask::${PROD_CLOUD_EU_ROLE}"
+          PROD_CLOUD_AP_REGION=$(echo "${PROD_CLOUD_AP}" | jq -r '.awsRegion' | tr -d '\n')
+          echo "PROD_CLOUD_AP_REGION=$PROD_CLOUD_AP_REGION" >> $GITHUB_ENV
+          echo "::add-mask::${PROD_CLOUD_AP_REGION}"
+          PROD_CLOUD_AP_ROLE=$(echo "${PROD_CLOUD_AP}" | jq -r '.stsPluginS3Role' | tr -d '\n')
+          echo "PROD_CLOUD_AP_ROLE=$PROD_CLOUD_AP_ROLE" >> $GITHUB_ENV
+          echo "::add-mask::${PROD_CLOUD_AP_ROLE}"
+          PROD_CLOUD_CA_REGION=$(echo "${PROD_CLOUD_CA}" | jq -r '.awsRegion' | tr -d '\n')
+          echo "PROD_CLOUD_CA_REGION=$PROD_CLOUD_CA_REGION" >> $GITHUB_ENV
+          echo "::add-mask::${PROD_CLOUD_CA_REGION}"
+          PROD_CLOUD_CA_ROLE=$(echo "${PROD_CLOUD_CA}" | jq -r '.stsPluginS3Role' | tr -d '\n')
+          echo "PROD_CLOUD_CA_ROLE=$PROD_CLOUD_CA_ROLE" >> $GITHUB_ENV
+          echo "::add-mask::${PROD_CLOUD_CA_ROLE}"
+          PROD_CLOUD_AU_REGION=$(echo "${PROD_CLOUD_AU}" | jq -r '.awsRegion' | tr -d '\n')
+          echo "PROD_CLOUD_AU_REGION=$PROD_CLOUD_AU_REGION" >> $GITHUB_ENV
+          echo "::add-mask::${PROD_CLOUD_AU_REGION}"
+          PROD_CLOUD_AU_ROLE=$(echo "${PROD_CLOUD_AU}" | jq -r '.stsPluginS3Role' | tr -d '\n')
+          echo "PROD_CLOUD_AU_ROLE=$PROD_CLOUD_AU_ROLE" >> $GITHUB_ENV
+          echo "::add-mask::${PROD_CLOUD_AU_ROLE}"
+          PROD_CLOUD_US2_REGION=$(echo "${PROD_CLOUD_US2}" | jq -r '.awsRegion' | tr -d '\n')
+          echo "PROD_CLOUD_US2_REGION=$PROD_CLOUD_US2_REGION" >> $GITHUB_ENV
+          echo "::add-mask::${PROD_CLOUD_US2_REGION}"
+          PROD_CLOUD_US2_ROLE=$(echo "${PROD_CLOUD_US2}" | jq -r '.stsPluginS3Role' | tr -d '\n')
+          echo "PROD_CLOUD_US2_ROLE=$PROD_CLOUD_US2_ROLE" >> $GITHUB_ENV
+          echo "::add-mask::${PROD_CLOUD_US2_ROLE}"
+          PROD_CLOUD_US3_REGION=$(echo "${PROD_CLOUD_US3}" | jq -r '.awsRegion' | tr -d '\n')
+          echo "PROD_CLOUD_US3_REGION=$PROD_CLOUD_US3_REGION" >> $GITHUB_ENV
+          echo "::add-mask::${PROD_CLOUD_US3_REGION}"
+          PROD_CLOUD_US3_ROLE=$(echo "${PROD_CLOUD_US3}" | jq -r '.stsPluginS3Role' | tr -d '\n')
+          echo "PROD_CLOUD_US3_ROLE=$PROD_CLOUD_US3_ROLE" >> $GITHUB_ENV
+          echo "::add-mask::${PROD_CLOUD_US3_ROLE}"
+          INT_CLOUD_US_REGION=$(echo "${INT_CLOUD_US}" | jq -r '.awsRegion' | tr -d '\n')
+          echo "INT_CLOUD_US_REGION=$INT_CLOUD_US_REGION" >> $GITHUB_ENV
+          echo "::add-mask::${INT_CLOUD_US_REGION}"
+          INT_CLOUD_US_ROLE=$(echo "${INT_CLOUD_US}" | jq -r '.stsPluginS3Role' | tr -d '\n')
+          echo "INT_CLOUD_US_ROLE=$INT_CLOUD_US_ROLE" >> $GITHUB_ENV
+          echo "::add-mask::${INT_CLOUD_US_ROLE}"
+          HUB_PROD_REGION=$(echo "${HUB_PROD}" | jq -r '.awsRegion' | tr -d '\n')
+          echo "HUB_PROD_REGION=$HUB_PROD_REGION" >> $GITHUB_ENV
+          echo "::add-mask::${HUB_PROD_REGION}"
+          HUB_PROD_ROLE=$(echo "${HUB_PROD}" | jq -r '.stsPluginS3Role' | tr -d '\n')
+          echo "HUB_PROD_ROLE=$HUB_PROD_ROLE" >> $GITHUB_ENV
+          echo "::add-mask::${HUB_PROD_ROLE}"
+          HUB_STAGING_REGION=$(echo "${HUB_STAGING}" | jq -r '.awsRegion' | tr -d '\n')
+          echo "HUB_STAGING_REGION=$HUB_STAGING_REGION" >> $GITHUB_ENV
+          echo "::add-mask::${HUB_STAGING_REGION}"
+          HUB_STAGING_ROLE=$(echo "${HUB_STAGING}" | jq -r '.stsPluginS3Role' | tr -d '\n')
+          echo "HUB_STAGING_ROLE=$HUB_STAGING_ROLE" >> $GITHUB_ENV
+          echo "::add-mask::${HUB_STAGING_ROLE}"
+          ALLIANCE_STAGING_REGION=$(echo "${ALLIANCE_STAGING}" | jq -r '.awsRegion' | tr -d '\n')
+          echo "ALLIANCE_STAGING_REGION=$ALLIANCE_STAGING_REGION" >> $GITHUB_ENV
+          echo "::add-mask::${ALLIANCE_STAGING_REGION}"
+          ALLIANCE_STAGING_ROLE=$(echo "${ALLIANCE_STAGING}" | jq -r '.stsPluginS3Role' | tr -d '\n')
+          echo "ALLIANCE_STAGING_ROLE=$ALLIANCE_STAGING_ROLE" >> $GITHUB_ENV
+          echo "::add-mask::${ALLIANCE_STAGING_ROLE}"
+          ALLIANCE_PROD_REGION=$(echo "${ALLIANCE_PROD}" | jq -r '.awsRegion' | tr -d '\n')
+          echo "ALLIANCE_PROD_REGION=$ALLIANCE_PROD_REGION" >> $GITHUB_ENV
+          echo "::add-mask::${ALLIANCE_PROD_REGION}"
+          ALLIANCE_PROD_ROLE=$(echo "${ALLIANCE_PROD}" | jq -r '.stsPluginS3Role' | tr -d '\n')
+          echo "ALLIANCE_PROD_ROLE=$ALLIANCE_PROD_ROLE" >> $GITHUB_ENV
+          echo "::add-mask::${ALLIANCE_PROD_ROLE}"
 
       - name: Checkout Repository
         id: checkoutRepository
@@ -308,15 +311,17 @@ jobs:
       - name: Install CI/CD Tool
         id: installCICDTool
         run: |
-            curl -s https://${PACKAGECLOUD_PYTHON_TOOLING_UNSTABLE}:@packagecloud.io/install/repositories/r8/insightconnect-internal-python-tooling/script.python.sh | bash
-            .ci_venv/bin/pip install icon-integrations-ci~=2.11
+          # Install CI Tooling
+          curl -s https://${PACKAGECLOUD_PYTHON_TOOLING_UNSTABLE}:@packagecloud.io/install/repositories/r8/insightconnect-internal-python-tooling/script.python.sh | bash
+          .ci_venv/bin/pip install icon-integrations-ci~=2.11
 
-      - name: Announce Plugin Release Started via Slack
-        id: announcePluginReleaseStartedViaSlack
+      - name: Announce Plugin Release Started
+        id: announcePluginReleaseStarted
         if: always()
         run: |
+          # Announce release
           cd plugins
-          ./.ci_venv/bin/icon-ci jenkins-announce --status started
+          ./.ci_venv/bin/icon-ci jenkins-announce --status started --webhook_url $ICON_INTEGRATION_RELEASES_ANNOUNCE_WEBHOOK
 
       - name: Configure AWS Credentials PROD CLOUD US
         id: configureAWSUS
@@ -500,7 +505,7 @@ jobs:
         run: |
           cd plugins
           ../.ci_venv/bin/icon-ci tag
-          ../.ci_venv/bin/icon-ci jenkins-announce --status success
+          ../.ci_venv/bin/icon-ci jenkins-announce --status success --webhook_url $ICON_INTEGRATION_RELEASES_ANNOUNCE_WEBHOOK
 
       - name: Plugin Details on Success
         id: pluginDetailsonSuccess
@@ -513,39 +518,41 @@ jobs:
         id: setupAutoPR
         if: success()
         run: |
+          # Setup plugin details for cloud deployment
           cd plugins
           export PLUGINS_DETAILS=$(cat plugins/plugin.properties)
           echo "PLUGINS_DETAILS=$PLUGINS_DETAILS" >> $GITHUB_ENV
 
-      - name: Trigger Auto PR for Staging
-        id: triggerAutoPRForStaging
+      - name: Trigger Auto Release for Staging
+        id: triggerAutoReleaseForStaging
         if: success()
         uses: jabbukka/jenkins-trigger@main
         with:
           url: ${{ secrets.JENKINS_URL }}
-          job_name: "cis-cloud-plugins-deployment-auto-pr"
+          job_name: ${{ secrets.JENKINS_CLOUD_JOB }}
           user_name: ${{ secrets.JENKINS_USER }}
           api_token: ${{ secrets.JENKINS_TOKEN }}
           parameter: {"PLUGINS_DETAILS":$PLUGINS_DETAILS,"AUTOMERGE":true,"ENVIRONMENT": "staging"}
           wait: "true"
           timeout: "1000"
 
-      - name: Trigger Auto PR for Production
-        id: triggerAutoPRForProduction
+      - name: Trigger Auto Release for Production
+        id: triggerAutoReleaseForProduction
         if: success()
         uses: jabbukka/jenkins-trigger@main
         with:
           url: ${{ secrets.JENKINS_URL }}
-          job_name: "cis-cloud-plugins-deployment-auto-pr"
+          job_name: ${{ secrets.JENKINS_CLOUD_JOB }}
           user_name: ${{ secrets.JENKINS_USER }}
           api_token: ${{ secrets.JENKINS_TOKEN }}
           parameter: {"PLUGINS_DETAILS":$PLUGINS_DETAILS,"AUTOMERGE":false,"ENVIRONMENT": "production"}
           wait: "true"
           timeout: "1000"
 
-      - name: Announce Plugin Release Failure via Slack
-        id: announcePluginReleaseFailureViaSlack
+      - name: Announce Plugin Release Failure
+        id: announcePluginReleaseFailure
         if: failure()
         run: |
+          # Announce if failure
           cd plugins
-          ../.ci_venv/bin/icon-ci jenkins-announce --status failure
+          ../.ci_venv/bin/icon-ci jenkins-announce --status failure --webhook_url $ICON_INTEGRATION_RELEASES_ANNOUNCE_WEBHOOK
