[Microsoft Windows Defender ATP] Update plugin to be cloud enabled (#1994)
* PLGN-387-Updating Microsoft Windows Defender ATP to be cloud enabled

* PLGN-387-Updating Spec and help to ensure that all actinos/triggers have examples

* PLG-387-Updating the version of the sdk that is used

--- a/plugins/microsoft_atp/Dockerfile
+++ b/plugins/microsoft_atp/Dockerfile
@@ -1,36 +1,20 @@
-FROM rapid7/insightconnect-python-3-38-slim-plugin:4
-# Refer to the following documentation for available SDK parent images: https://docs.rapid7.com/insightconnect/sdk-guide/#sdk-guide
+FROM rapid7/insightconnect-python-3-38-plugin:5
 
 LABEL organization=rapid7
 LABEL sdk=python
 
-# Add any custom package dependencies here
-# NOTE: Add pip packages to requirements.txt
-
-# Need gcc for maya
-RUN apk add --no-cache --virtual .build-deps \
-                                        make \
-                                        gcc \
-                                        libc-dev \
-                                        libffi-dev \
-                                        openssl-dev \
-                                        libxml2-dev \
-                                        libxslt-dev
-# End package dependencies
-
-# Add source code
 WORKDIR /python/src
-ADD ./plugin.spec.yaml /plugin.spec.yaml
-ADD . /python/src
 
-# Install pip dependencies
+ADD ./plugin.spec.yaml /plugin.spec.yaml
+ADD ./requirements.txt /python/src/requirements.txt
+
 RUN if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-# Install plugin
-RUN python setup.py build && python setup.py install
+ADD . /python/src
+
+RUN	python setup.py build && python setup.py install
 
 # User to run plugin code. The two supported users are: root, nobody
-# Need root for CA bundle
-USER root
+USER nobody
 
 ENTRYPOINT ["/usr/local/bin/komand_microsoft_atp"]
