--- a/plugins/powershell/Dockerfile
+++ b/plugins/powershell/Dockerfile
@@ -47,6 +47,6 @@ RUN if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 RUN python setup.py build && python setup.py install
 
 # User to run plugin code. The two supported users are: root, nobody
-USER nobody
+USER root
 
 ENTRYPOINT ["/usr/local/bin/icon_powershell"]
