--- a/plugins/active_directory_ldap/plugin.spec.yaml
+++ b/plugins/active_directory_ldap/plugin.spec.yaml
@@ -4,7 +4,7 @@ products: [insightconnect]
 name: active_directory_ldap
 title: Active Directory LDAP
 description: "This plugin utilizes Microsoft's Active Directory service to create and manage domains, users, and objects within a network"
-version: 8.0.1
+version: 9.0.0
 supported_versions: ["Azure Active Directory 2.0.89.0"]
 vendor: rapid7
 support: rapid7
@@ -195,8 +195,10 @@ types:
       required: false
   result:
     attributes:
+      title: Attributes
       type: object
     dn:
+      title: DN
       type: string
   modified_user_error:
     dn:
