--- a/plugins/rapid7_insightidr/plugin.spec.yaml
+++ b/plugins/rapid7_insightidr/plugin.spec.yaml
@@ -615,40 +615,40 @@ actions:
       ips:
         title: IP Addresses
         description: IP addresses to add
-        type: "[]string"
+        type: '[]string'
         required: false
-        example: [ "10.0.0.1","10.0.0.2" ]
+        example: [ '10.0.0.1','10.0.0.2' ]
       hashes:
         title: Process Hashes
         description: Process hashes to add
-        type: "[]string"
+        type: '[]string'
         required: false
-        example: [ "A94A8FE5CCB19BA61C4C0873D391E987982FBBD3","C3499C2729730A7F807EFB8676A92DCB6F8A3F8F" ]
+        example: [ 'A94A8FE5CCB19BA61C4C0873D391E987982FBBD3','C3499C2729730A7F807EFB8676A92DCB6F8A3F8F' ]
       domain_names:
         title: Domain Names
         description: Domain names to add
-        type: "[]string"
+        type: '[]string'
         required: false
-        example: [ "rapid7.com","google.com" ]
+        example: [ 'rapid7.com','google.com' ]
       urls:
         title: URLs
         description: URLs to add
-        type: "[]string"
+        type: '[]string'
         required: false
-        example: [ "https://example.com","https://test.com" ]
+        example: [ 'https://example.com','https://test.com' ]
     output:
       rejected_indicators:
         title: Rejected Indicators
         description: The list of indicators that have been rejected during the update
-        type: "[]string"
+        type: '[]string'
         required: false
-        example: ["example.com", "10.0.0.1"]
+        example: ['example.com', '10.0.0.1']
       threat:
         title: Threat
         description: The information about the threat
         type: threat
         required: false
-        example: {"name": "bad-virus","note": "test","published": False,"indicator_count": 2}
+        example: "{'name': 'bad-virus','note': 'test','published': False,'indicator_count': 2}"
   list_investigations:
     title: List Investigations
     description: Retrieve a page of investigations matching the given request parameters
@@ -656,21 +656,21 @@ actions:
       statuses:
         title: Statuses
         description: Comma-separated list of investigation statuses to include in the result. Possible values are OPEN, CLOSED, INVESTIGATING, WAITING
-        type: "[]string"
+        type: '[]string'
         required: false
-        example: ["CLOSED"]
+        example: ['CLOSED']
       start_time:
         title: Start Time
         description: An optional ISO-formatted timestamp, where only investigations whose createTime is after this date will be returned
         type: date
         required: false
-        example: "2020-06-01T12:11:13+05:30"
+        example: '2020-06-01T12:11:13+05:30'
       end_time:
         title: End Time
         description: An optional-ISO formatted timestamp, where only investigations whose createTime is before this date will be returned
         type: date
         required: false
-        example: "2020-06-01T12:11:13+05:30"
+        example: '2020-06-01T12:11:13+05:30'
       size:
         title: Size
         description: Amount of data for a page to retrieve, where its value must be greater than 0 or less than or equal to 100
@@ -694,9 +694,9 @@ actions:
       priorities:
         title: Priorities
         description: A comma-separated list of investigation priorities to include in the result, where possible values are LOW, MEDIUM, HIGH, CRITICAL
-        type: "[]string"
+        type: '[]string'
         required: false
-        example: '["LOW", "MEDIUM", "HIGH", "CRITICAL"]'
+        example: "['LOW', 'MEDIUM', 'HIGH', 'CRITICAL']"
       sort:
         title: Sort
         description: A field for investigations to be sorted
@@ -720,14 +720,14 @@ actions:
       sources:
         title: Sources
         description: A comma-separated list of investigation sources to include in the result, where possible values are USER, ALERT, HUNT, AUTOMATION
-        type: "[]string"
+        type: '[]string'
         required: false
-        example: '["USER","ALERT"]'
+        example: "['USER','ALERT']"
     output:
       investigations:
         title: Investigations
         description: A list of found investigations
-        type: "[]investigation"
+        type: '[]investigation'
         required: true
         example: [{"assignee": {"email": "user@example.com","name": "Ellen Example"},"created_time": "2018-06-06T16:56:42Z","disposition": "BENIGN","first_alert_time": "2018-06-06T16:56:42Z","last_accessed": "2018-06-06T16:56:42Z","latest_alert_time": "2018-06-06T16:56:42Z","organization_id": "174e4f99-2ac7-4481-9301-4d24c34baf06","priority": "CRITICAL","rrn": "rrn:example","source": "ALERT","status": "OPEN","title": "Example Title"}]
       metadata:
